--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,8 @@ a:hover {
 }
 .text-color-main {
   margin-left: 1rem;
-  color: #5b86e5;
-  -webkit-text-fill-color: #5b86e5;
+  color: #edb200;
+  -webkit-text-fill-color: #edb200;
 }
 @supports ((-webkit-background-clip: text) or (background-clip: text)) or
   (-webkit-background-clip: text) {
@@ -58,7 +58,7 @@ a:hover {
   .text-color-main {
     margin: 0;
     background-image: none;
-    -webkit-text-fill-color: #5b86e5;
+    -webkit-text-fill-color: #edb200;
     box-shadow: none;
   }
 }
@@ -101,8 +101,8 @@ a:hover {
   }
 }
 .cta-btn--hero {
-  color: #5b86e5;
-  -webkit-text-fill-color: #5b86e5;
+  color: #edb200;
+  -webkit-text-fill-color: #edb200;
   border: 2px solid rgba(0, 0, 0, 0);
   -o-border-image: linear-gradient(135deg,#edb200 0%, #ed7a00 100%);
   border-image: linear-gradient(135deg,#edb200 0%, #ed7a00 100%);
@@ -121,7 +121,7 @@ a:hover {
 @media screen and (-ms-high-contrast: active),
   screen and (-ms-high-contrast: none) {
   .cta-btn--hero {
-    color: #5b86e5;
+    color: #edb200;
   }
   .cta-btn--hero:hover {
     color: #fff;
@@ -130,9 +130,9 @@ a:hover {
 @media (max-width: 37.5em) {
   .cta-btn--hero {
     background-image: none;
-    border: 2px solid #5b86e5;
+    border: 2px solid #edb200;
     box-shadow: none;
-    -webkit-text-fill-color: #5b86e5;
+    -webkit-text-fill-color: #edb200;
   }
 }
 .cta-btn--hero::after {
@@ -146,7 +146,7 @@ a:hover {
 }
 @media (max-width: 37.5em) {
   .cta-btn--hero:hover {
-    -webkit-text-fill-color: #5b86e5;
+    -webkit-text-fill-color: #edb200;
   }
 }
 .cta-btn--hero:hover::after {
@@ -161,7 +161,7 @@ a:hover {
   background: #fff;
 }
 .cta-btn--resume:hover {
-  color: #5b86e5;
+  color: #edb200;
   text-decoration: none;
   box-shadow: none;
 }
@@ -422,22 +422,47 @@ section .row span {
   }
 }
 #hero {
-  min-height: 100vh;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  background: #252525;
-  font-weight: 400;
-  color: #ffffff;
-  padding: 0rem 5.6rem;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  line-height: 1.2;
-  animation: hidden 1000ms linear forwards;
-}
+    min-height: 100vh;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    background: #252525;
+    font-weight: 400;
+    color: #ffffff;
+    padding: 0rem 5.6rem;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    line-height: 1.2;
+    animation: hidden 1000ms linear forwards;
+    /* position:absolute; */
+    overflow: hidden;
+  }
+  
+  #hero-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.1; /* Adjust the opacity value as needed */
+    z-index: -1; /* Ensure the video is behind other elements */
+  }
+  
+  #hero .container {
+    position: relative;
+    z-index: 1; /* Ensure the container is above the video */
+  }
+  
+  .scroll-down-link {
+    position: relative;
+    z-index: 1; /* Ensure the scroll-down link is above the video */
+  }
+
+  
 #hero::before {
     content: "";
     position: absolute;
@@ -445,12 +470,13 @@ section .row span {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../assets/!Google.png'); /* Add the path to your image here */
+    /* background-image: url('../assets/!Google.png'); 
     background-size: cover;
-    background-position: center;
-    opacity: 0.1; /* Adjust the opacity value as needed */
+    background-position: center; */
+    opacity: 0.001; /* Adjust the opacity value as needed */
     z-index: -1;
   }
+  
 @media (max-width: 56.25em) {
   #hero {
     justify-content: center;
@@ -470,7 +496,7 @@ section .row span {
   
   .glow:hover {
     text-shadow: 
-      0 0 5px #ffd27f,     /* Soft white glow at the center */
+      0 0 5px #ffffff,     /* Soft white glow at the center */
       0 0 15px #ffae42,    /* Subtle orange highlight */
       0 0 25px #ff8c00,    /* Deep warm orange glow */
       0 0 35px #ff6a00,    /* Bright fiery orange */
@@ -535,7 +561,7 @@ section .row span {
 .scroll-down {
   height: 50px;
   width: 30px;
-  border: 2px solid #000;
+  border: 2px solid #ffffff;
   border-radius: 50px;
   cursor: pointer;
 }
@@ -547,7 +573,7 @@ section .row span {
   position: absolute;
   top: 20%;
   left: 50%;
-  border: 2px solid #5b86e5;
+  border: 2px solid #edb200;
   transform: translate(-50%, -100%) rotate(45deg);
   border-top: none;
   border-left: none;
