--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,7 @@ a:hover {
   transform: translate(-12%, -30%) rotate(45deg);
 }
 .footer {
+  position: relative;
   background-color: #333;
   padding: 4.8rem 0;
 }
@@ -328,6 +329,8 @@ section .row span {
   }
 }
 #about {
+  position: relative;
+  z-index: 11;
   background-color: #36d1dc;
   background-image: linear-gradient(135deg, #edb200 0%, #ed7a00 100%);
   color: #fff;
@@ -470,9 +473,6 @@ section .row span {
     left: 0;
     right: 0;
     bottom: 0;
-    /* background-image: url('../assets/!Google.png'); 
-    background-size: cover;
-    background-position: center; */
     opacity: 0.001; /* Adjust the opacity value as needed */
     z-index: -1;
   }
@@ -610,6 +610,7 @@ section .row span {
   }
 }
 #projects {
+  position: relative;
   background-color: #252525;
   color: #ffffff;
   margin-top: -15rem;
