--- a/css/main.css
+++ b/css/main.css
@@ -331,7 +331,7 @@ section .row span {
 #about {
   position: relative;
   z-index: 11;
-  background-color: #36d1dc;
+  background-color: #252525;
   background-image: linear-gradient(135deg, #edb200 0%, #ed7a00 100%);
   color: #fff;
   height: 200%;
@@ -364,6 +364,7 @@ section .row span {
 #about .about-wrapper__image img {
   max-width: 450px;
   width: 100%;
+  border-radius: 15px;
 }
 @media (max-width: 75em) {
   #about .about-wrapper__image {
@@ -390,7 +391,7 @@ section .row span {
 }
 #contact {
   background-image: linear-gradient(135deg, #edb200 0%, #ed7a00 100%);
-  -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+  /* -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%); */
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 10rem 0;
   margin-top: -15rem;
@@ -676,32 +677,137 @@ section .row span {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+
 }
 #projects .project-wrapper__image {
   width: 90%;
   margin: 0 auto;
+  border-radius: 15px;
 }
 @media (max-width: 75em) {
   #projects .project-wrapper__image {
     width: 100%;
     margin: 0;
+    border-radius: 15px;
   }
 }
 #projects .project-wrapper__image .thumbnail {
   border: none;
   box-shadow: #0e0d0d 0px 0px 20px;
+  border-radius: 15px;
 }
 #projects .project-wrapper__image .thumbnail .img-fluid {
   width: 100%;
   height: auto;
   vertical-align: middle;
-  border-radius: 2px;
+  border-radius: 15px;
 }
 @media (max-width: 37.5em) {
   #projects .project-wrapper__image .thumbnail {
     box-shadow: none;
     border: 1px solid #d2d2d2;
+    border-radius: 15px;
     margin-bottom: 3.2rem;
     transform: none;
+  }
+}
+
+
+.project-wrapper__image .thumbnail::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('./assets/project-logo.png'); /* Default logo image */
+  background-size: cover;
+  background-position: center;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 1;
+}
+
+.project-wrapper__image .thumbnail:hover::before {
+  background-image: url('./assets/project-screenshot.png'); /* Screenshot image */
+  opacity: 0; /* Hide the overlay to reveal the screenshot */
+}
+
+
+
+
+#experience {
+  position: relative;
+  z-index: 11;
+  background-color: #252525;
+  background-image: linear-gradient(135deg, #edb200 0%, #ed7a00 100%);
+  color: #fff;
+  height: 200%;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  /* -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%); */
+  clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+  padding: 15rem 0 10rem 0;
+  margin-top: -15rem;
+  margin-bottom: -1px;
+  padding-bottom: 10%;
+}
+@media (max-width: 75em) {
+  #experience {
+    height: 100%;
+    -webkit-clip-path: none;
+    clip-path: none;
+  }
+}
+#experience .experience-wrapper {
+  grid-template-columns: 1fr 1fr;
+}
+@media (max-width: 37.5em) {
+  #experience .experience-wrapper {
+    padding-bottom: 5rem;
+    grid-template-columns: 1fr;
+  }
+}
+#experience .experience-wrapper__image {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+#experience .experience-wrapper__image img {
+  max-width: 450px;
+  width: 100%;
+  border-radius: 15px;
+}
+@media (max-width: 75em) {
+  #experience .experience-wrapper__image {
+    height: 100%;
+  }
+}
+@media (max-width: 48em) {
+  #experience .experience-wrapper__image {
+    padding-bottom: 4rem;
+  }
+}
+#experience .experience-wrapper__info {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
+@media (max-width: 48em) {
+  #experience .experience-wrapper__info {
+    align-items: center;
+    text-align: center;
+  }
+}
+
+#experience .experience-wrapper__text-title {
+  font-weight: bold;
+  /* margin-bottom: 1.8rem; */
+  font-size: 2.5rem;
+}
+@media (max-width: 37.5em) {
+  #experience .experience-wrapper__text-title {
+    font-size: 2rem;
   }
 }
