--- a/css/main.css
+++ b/css/main.css
@@ -755,6 +755,7 @@ section .row span {
     height: 100%;
     -webkit-clip-path: none;
     clip-path: none;
+    margin-top: 0rem;
   }
 }
 #experience .experience-wrapper {
@@ -764,6 +765,7 @@ section .row span {
   #experience .experience-wrapper {
     padding-bottom: 5rem;
     grid-template-columns: 1fr;
+    margin-top: 0rem;
   }
 }
 #experience .experience-wrapper__image {
@@ -773,7 +775,7 @@ section .row span {
   justify-content: center;
 }
 #experience .experience-wrapper__image img {
-  max-width: 450px;
+  max-width: 350px;
   width: 100%;
   border-radius: 15px;
 }
@@ -802,10 +804,18 @@ section .row span {
 }
 
 #experience .experience-wrapper__text-title {
-  font-weight: bold;
+  /* font-weight: bold; */
   /* margin-bottom: 1.8rem; */
   font-size: 2.5rem;
 }
+
+#experience .experience-wrapper__bullet {
+  /* font-weight: bold; */
+  /* margin-bottom: 1.8rem; */
+  margin-left: 2rem;
+  font-size: 1.5rem;
+}
+
 @media (max-width: 37.5em) {
   #experience .experience-wrapper__text-title {
     font-size: 2rem;
