--- a/css/main.css
+++ b/css/main.css
@@ -390,13 +390,16 @@ section .row span {
   }
 }
 #contact {
-  background-image: linear-gradient(135deg, #edb200 0%, #ed7a00 100%);
+  background-image: linear-gradient(135deg, #252525 0%, #252525 100%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   /* -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%); */
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 10rem 0;
   margin-top: -15rem;
   margin-bottom: -1px;
   color: #fff;
+  position: relative;
+  z-index: 11;
 }
 @media (max-width: 75em) {
   #contact {
