--- a/css/main.css
+++ b/css/main.css
@@ -763,6 +763,7 @@ section .row span {
 }
 #experience .experience-wrapper {
   grid-template-columns: 1fr 1fr;
+  margin-top: 3.2rem;
 }
 @media (max-width: 37.5em) {
   #experience .experience-wrapper {
@@ -823,4 +824,19 @@ section .row span {
   #experience .experience-wrapper__text-title {
     font-size: 2rem;
   }
+}
+
+.experience-wrapper__cta {
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem; /* Add some margin if needed */
+}
+
+.experience-center-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 3.2rem;
 }
