added projects images redirectable

--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,7 @@ a:hover {
   color: #4875b4;
 }
 .social-links a:hover .fa-codepen {
-  color: #212121;
+  color: #edb200;
 }
 .back-to-top i {
   color: #fff;
