added lightbulb favicon

--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ a:hover {
 }
 .footer__text a:hover,
 .footer__text a:active {
-  color: #36d1dc;
+  color: #edb200;
 }
 .footer hr {
   margin: 1rem auto;
