--- a/css/main.css
+++ b/css/main.css
@@ -795,6 +795,7 @@ section .row span {
   max-width: 350px;
   width: 100%;
   border-radius: 15px;
+  box-shadow: #0e0d0d 0px 0px 20px;
 }
 @media (max-width: 75em) {
   #experience .experience-wrapper__image {
